# PandABlocks-FPGA

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.rst  CONFIG  CONFIG.example  CONFIG.maxiv  CONTRIBUTING.rst  Dockerfile  Makefile  README  README.md  README.rst  SLOW_VERSION  VERSION  boot  buid_ps.tcl  buid_top.tcl  build_ips.tcl  build_ps.tcl  build_top.tcl  build_xsdk.tcl  check-whitespace  config_d  jtag_boot.tcl  opkg-feed  opkg-graph-deps  opkg-list-fields  pyproject.toml  regression_tests.tcl  simserver  simserver.in  single_test.tcl  switcher.json  update-alternatives  update_textio.tcl
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  summerwind_docker.dockerfile
CarrierFPGA/: Makefile  README.md  VERSION  build_devtree.tcl  build_ips.tcl  build_ps.tcl  build_top.tcl  build_xsdk.tcl  panda_ps_wrapper.vhd
SlowFPGA/: Makefile  VERSION  slow_top.files
apps/: DAQ-fmc_lback-sfp_lback.app.ini  NAMC-amc_loopback.app.ini  NAMC-fmc_10g_eth_exdes.app.ini  NAMC-fmc_amc_eth.app.ini  NAMC-fmc_hpc_lback.app.ini  NAMC-fmc_hpc_sfp1_udpontrig.app.ini  NAMC-fmc_hpc_sfp_eth_loop.app.ini  NAMC-fmc_hpc_sfp_lback.app.ini  NAMC-fmc_hpc_wire_lback.app.ini  NAMC-no-fmc.app.ini  NamcZynq-fmc_adc100m.app.ini  NamcZynq-fmc_amc_eth.app.ini  NamcZynq-fmc_lback.app.ini  NamcZynq-no-fmc.app.ini  PandABox-fmc_24vio-sfp3_sync.app.ini  PandABox-fmc_24vio-sfp_lback.app.ini  PandABox-fmc_24vio.app.ini  PandABox-fmc_acq427-sfp3_sync.app.ini  PandABox-fmc_acq427-sfp_dls_evr-sfp_udpontrig-sfp_lback.app.ini  PandABox-fmc_acq427-sfp_eventr-sfp_sync.app.ini  PandABox-fmc_acq427-sfp_eventr.app.ini  PandABox-fmc_acq427-sfp_lback.app.ini  PandABox-fmc_acq427.app.ini  PandABox-fmc_acq430-sfp3_sync.app.ini  PandABox-fmc_acq430-sfp_lback.app.ini  PandABox-fmc_acq430.app.ini  PandABox-fmc_lback-sfp1_udpontrig.app.ini  PandABox-fmc_lback-sfp2_udpontrig.app.ini  PandABox-fmc_lback-sfp_eventr-sfp_sync.app.ini  PandABox-fmc_lback-sfp_eventr.app.ini  PandABox-fmc_lback-sfp_lback.app.ini  PandABox-fmc_lback-sfp_udpontrig.app.ini  PandABox-fmc_pico_1m4.app.ini  PandABox-maxiv-test-fmc_acq427.app.ini  PandABox-no-fmc-sfp1_dls_eventr.app.ini  PandABox-no-fmc-sfp1_eventr.app.ini  (+48 more)
(+3479 files in other folders)
